--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
 
     <color name="colorNavigationBar">#009688</color>
     <color name="colorBackground">#ffffff</color>
+
+    <color name="colorFabNormal">#009688</color>
+    <color name="colorFabPressed">#00897b</color>
 </resources>
