--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,9 +16,14 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
+
         fab:fab_addButtonColorNormal="@color/colorFabNormal"
         fab:fab_addButtonColorPressed="@color/colorFabPressed">
-
+<com.getbase.floatingactionbutton.FloatingActionButton
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:onClick="toSettings"
+    />
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 </RelativeLayout>
