--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:background="@color/md_grey_400"
-    android:layout_height="match_parent">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.dreamteam.organizeyourday.SettindsActivity">
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,6 +17,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="..."
-        android:id="@+id/textAbout" />
-</LinearLayout>
+        android:text="SIMPLE"
+        android:textSize="30dp"
+        android:id="@+id/textAbout"
+        android:layout_below="@+id/buttonAbout"
+        android:textStyle="italic"
+        android:textColor="#000000" />
+</RelativeLayout>
