--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
-    android:background="@color/md_grey_400"
+    android:background="@color/colorBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.dreamteam.organizeyourday.SettindsActivity">
     <Button
+        android:id="@+id/buttonAbout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="SetTextAbout"
         android:text="About"
-        android:id="@+id/buttonAbout" />
+        android:onClick="setTextAbout"
+        />
 
     <TextView
         android:layout_width="match_parent"
