--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -1,10 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colorBackground"
+    android:background="@color/md_grey_200"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.dreamteam.organizeyourday.SettindsActivity"
     android:id="@+id/settingsLayout">
 
-</RelativeLayout>
+    <include android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:background="@color/md_grey_200"
+        android:text="Удалить все пользовательские данные"
+        android:id="@+id/settingButton_0"
+        android:layout_gravity="center_horizontal" />
+
+    <Button
+        android:background="@color/md_grey_200"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:text="Выбрать тему"
+        android:id="@+id/settingButton_1"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp" />
+</LinearLayout>
