Add EditCardActivity/layout Add Intent to activity_card_layout Fix "About" intent Modify AppTheme

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_marginRight="8dp"
         fab:fab_colorNormal="@color/colorFabNormal"
         fab:fab_colorPressed="@color/colorFabPressed"
+        android:onClick="addCard"
         />
 
 </RelativeLayout>
