--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:navigationBarColor">@color/colorNavigationBar</item>
+        <item name="android:colorButtonNormal">@color/colorButton</item>
+        <item name="android:textColor">#616161</item>
     </style>
 
 </resources>
