--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,24 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    style="@style/AppTheme"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
+
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.dreamteam.organizeyourday.EditCardActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.dreamteam.organizeyourday.MainActivity"
+    tools:showIn="@layout/app_bar_main">
     <TextView
-        android:id="@+id/textAbout"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Создать напоминание..."
-        android:textSize="18dp"
-        android:textStyle="italic"
-        android:textColor="#616161"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:text="Hello World!" />
 </RelativeLayout>
