--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/md_grey_200"
+    android:background="@color/colorBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.dreamteam.organizeyourday.AboutActivity"
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="About"
-        android:background="@color/md_grey_200"
+        android:background="@color/md_grey_100"
         android:onClick="setTextAbout"
         android:layout_below="@+id/toolbar"
         android:layout_alignParentStart="true" />
