--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,7 +28,7 @@
 
             <item
                 android:id="@+id/about"
-
+                android:icon="@drawable/ic_info"
                 android:title="About"/>
         </menu>
     </item>
