--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="#00695C"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -11,15 +10,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
 
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@drawable/android5">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="68dp"
+        android:layout_width="69dp"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@android:drawable/ic_menu_crop"
-        android:layout_weight="0.87" />
+        android:src="@mipmap/ic_launcher"
+        android:focusable="false"
+        android:adjustViewBounds="false"
+        android:baselineAlignBottom="false" />
 
     <TextView
 
@@ -28,7 +30,8 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Dream Team"
 
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:autoText="false" />
 
     <TextView
 
