--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00897b</color>
-    <color name="colorAccent">#ffffff</color>
+    <color name="colorAccent">#00897b</color>
 
     <color name="colorNavigationBar">#009688</color>
     <color name="colorBackground">#ffffff</color>
