add account.java add account layout add onClick(image)

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -21,7 +21,10 @@
         android:src="@mipmap/ic_launcher"
         android:focusable="false"
         android:adjustViewBounds="false"
-        android:baselineAlignBottom="false" />
+        android:baselineAlignBottom="false"
+        android:clickable="false"
+        android:onClick="jumpToAccount"
+        android:contextClickable="false" />
 
     <TextView
 
