--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -4,9 +4,7 @@
         android:title="Данные"
         android:key="pref_data"
         >
-
-
-        <EditTextPreference
+        <Preference
 
             android:key="format_data"
             android:title="Удалить данные"
@@ -14,17 +12,19 @@
             android:selectAllOnFocus="true"
             android:singleLine="true"
             android:defaultValue="true"
+            android:icon="@drawable/ic_info"
             />
     </PreferenceCategory>
 
     <ListPreference
         android:key="theme_list"
-        android:defaultValue="-1"
+        android:defaultValue="1"
         android:title="Тема"
         android:entries="@array/themes_list"
         android:entryValues="@array/themes_list_values"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
+        android:icon="@drawable/ic_menu_settings"
 
         />
 </PreferenceScreen>
