--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -15,6 +15,8 @@
             android:icon="@drawable/ic_info"
             />
     </PreferenceCategory>
+<PreferenceCategory android:title="Оформление" android:key="pref_themes">
+
 
     <ListPreference
         android:key="theme_list"
@@ -24,7 +26,8 @@
         android:entryValues="@array/themes_list_values"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
-        android:icon="@drawable/ic_menu_settings"
-
+        android:icon="@drawable/iconka_0"
         />
+
+</PreferenceCategory>
 </PreferenceScreen>
