Add test cardview

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,12 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="5dp"
+    android:paddingTop="5dp"
     tools:context="com.dreamteam.organizeyourday.Fragments.FragmentHome">
 
-    <!-- TODO: Update blank fragment layout -->
-    <ListView
-        android:id="@+id/list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:entries="@array/list"></ListView>
+   <android.support.v7.widget.RecyclerView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:id="@+id/cardList"
+       >
+
+   </android.support.v7.widget.RecyclerView>
 </FrameLayout>
