--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,9 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/PrimaryGreen</item>
+        <item name="colorPrimaryDark">@color/PrimaryDarkGreen</item>
+        <item name="colorAccent">@color/AccentGreen</item>
 
     </style>
     <style name="AppTheme.NoActionBar">
@@ -17,9 +17,9 @@
 
 
     <style name="Pink" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/md_pink_500</item>
-        <item name="colorPrimaryDark">@color/md_pink_600</item>
-        <item name="colorAccent">@color/md_pink_700</item>
+        <item name="colorPrimary">@color/PrimaryPink</item>
+        <item name="colorPrimaryDark">@color/PrimaryDarkPink</item>
+        <item name="colorAccent">@color/AccentPink</item>
     </style>
 
     <style name="Pink.NoActionBar">
