--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,10 @@
     <color name="PrimaryDarkGreen">#00897b</color>
     <color name="AccentGreen">#00897b</color>
 
+    <color name="PrimaryBlue">#2196F3</color>
+    <color name="PrimaryDarkBlue">#1E88E5</color>
+    <color name="AccentBlue">#1E88E5</color>
+
     <color name="PrimaryPink">#E91E63</color>
     <color name="PrimaryDarkPink">#D81B60</color>
     <color name="AccentPink">#D81B60</color>
