--- a/app/src/main/res/layout/data_base_test.xml
+++ b/app/src/main/res/layout/data_base_test.xml
@@ -24,12 +24,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </EditText>
-    <LinearLayout
+    <EditText
+        android:id="@+id/etSearch"
+        android:hint="Search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+    </EditText>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1">
         <Button
             android:id="@+id/bdAdd"
-            android:layout_width="wrap_content"
+            android:layout_width="74dp"
             android:layout_height="wrap_content"
             android:text="Add">
         </Button>
@@ -41,9 +48,22 @@
         </Button>
         <Button
             android:id="@+id/bdClear"
-            android:layout_width="wrap_content"
+            android:layout_width="67dp"
             android:layout_height="wrap_content"
             android:text="Clear">
+        </Button>
+        <Button
+            android:id="@+id/bdSort"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:text="Sort"
+            android:layout_weight="0.95">
+        </Button>
+        <Button
+            android:id="@+id/bdSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search">
         </Button>
     </LinearLayout>
 </LinearLayout>
