--- a/app/src/main/res/layout/activity_add_new_card.xml
+++ b/app/src/main/res/layout/activity_add_new_card.xml
@@ -7,21 +7,24 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     android:isScrollContainer="true"
+    android:orientation="vertical"
     tools:context="com.dreamteam.organizeyourday.AddNewCardActivity">
 
     <TextView
+        android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Title"
         android:textSize="24sp"/>
+
     <android.support.design.widget.TextInputEditText
         android:id="@+id/inputTitleText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
+        android:id="@+id/textViewDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Description"
@@ -29,7 +32,7 @@
         android:textSize="16sp"/>
 
   <android.support.design.widget.TextInputEditText
-      android:id="@+id/inputDescriptionText"
+      android:id="@+id/inputTextDescription"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       />
