--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -33,7 +33,7 @@
                     android:columnCount="2"
                      android:orientation="horizontal" >
                 <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="250dp"
                         android:layout_height="wrap_content"
                         android:textSize="24sp"
                         android:paddingLeft="16dp"
@@ -43,7 +43,8 @@
                 <TextView/>
 
                 <TextView
-                        android:layout_width="wrap_content"
+                        android:id="@+id/cardDescription"
+                        android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:text="Test information"
                         android:textSize="14sp"
