--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -61,6 +61,11 @@
                 />
             </GridLayout>
 
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/removeButton"
+                android:text="remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
