--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.dreamteam.organizeyourday.EditCardActivity">
+    tools:context="CardInformation">
+
     <TextView
         android:id="@+id/textAbout"
         android:layout_width="match_parent"
