--- a/app/src/main/res/anim/down_anim_fade_in.xml
+++ b/app/src/main/res/anim/down_anim_fade_in.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-
     <alpha
-        android:startOffset="500"
         android:duration="250"
-        android:fromAlpha="0"
+        android:fromAlpha="0.5"
         android:toAlpha="1" />
     <translate
-        android:startOffset="500"
         android:duration="250"
-        android:fromXDelta="100%"
-        android:toXDelta="0%"/>
+        android:fromYDelta="-20%"
+        android:toYDelta="0%"
+        />
 </set>
