--- a/app/src/main/res/anim/right_anim_fade_out.xml
+++ b/app/src/main/res/anim/right_anim_fade_out.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-
     <alpha
-        android:duration="400"
+        android:duration="250"
         android:fromAlpha="1"
         android:toAlpha="0.5" />
+    <translate
+        android:duration="250"
+        android:fromXDelta="0%"
+        android:toXDelta="-20%"
+        />
+
 </set>
