--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -7,6 +7,7 @@
               android:layout_marginTop="5dp"
               android:layout_marginRight="8dp"
               android:layout_marginLeft="8dp"
+    android:animateLayoutChanges="true"
 >
 
     <android.support.v7.widget.CardView
@@ -15,14 +16,17 @@
             android:layout_height="wrap_content"
             card:cardCornerRadius="3dp"
             card:cardElevation="2dp"
+        android:animateLayoutChanges="true"
             card:cardUseCompatPadding="true">
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 android:orientation="vertical">
 
             <ImageView android:layout_width="wrap_content"
+                android:id="@+id/TestImage"
                        android:layout_height="150dp"
                        android:src="@drawable/tumblr"
                        android:scaleType="centerCrop"/>
