--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,7 @@
     <color name="PrimaryPink">#E91E63</color>
     <color name="PrimaryDarkPink">#D81B60</color>
     <color name="AccentPink">#D81B60</color>
+    <color name="foreground_material_light">#ffffff</color>
+    <color name="black">#ffffff</color>
 
 </resources>
