--- a/app/src/main/res/layout/activity_add_new_card.xml
+++ b/app/src/main/res/layout/activity_add_new_card.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:isScrollContainer="true"
     android:orientation="vertical"
+    android:scrollbars="vertical"
     tools:context="com.dreamteam.organizeyourday.AddNewCardActivity">
 
     <TextView
@@ -57,6 +59,7 @@
             android:entries="@array/Priority">
         </Spinner>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -78,4 +81,8 @@
 
     </LinearLayout>
 
+    <TimePicker
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></TimePicker>
 </LinearLayout>
