--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,54 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:card="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginTop="5dp"
-              android:layout_marginRight="8dp"
-              android:layout_marginLeft="8dp"
-    android:id="@+id/card_layout"
-    android:animateLayoutChanges="true"
->
+    xmlns:card="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginLeft="8dp"
+    >
 
     <android.support.v7.widget.CardView
-            android:id="@+id/card"
+        android:id="@+id/card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        card:cardCornerRadius="3dp"
+        card:cardElevation="2dp"
+        card:cardUseCompatPadding="true">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            card:cardCornerRadius="3dp"
-            card:cardElevation="2dp"
-            android:animateLayoutChanges="true"
-            card:cardUseCompatPadding="true"
-        android:clickable="false">
+            android:orientation="vertical">
 
+            <ImageView android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:src="@drawable/tumblr"
+                android:scaleType="centerCrop"/>
+
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnCount="2"
+                android:orientation="horizontal" >
+                <TextView
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="16dp"
+                    android:id="@+id/title"/>
+
+                <TextView/>
 
                 <TextView
-                        android:layout_width="250dp"
-                        android:layout_height="wrap_content"
-                        android:textSize="24sp"
-                        android:paddingLeft="16dp"
-                        android:paddingTop="16dp"
-                        android:id="@+id/title"/>
-                <TextView
-                        android:id="@+id/cardDescription"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"
-                        android:text="Test information"
-                        android:textSize="14sp"
-                        android:paddingBottom="16dp"
-                        android:paddingLeft="16dp" />
+                    android:id="@+id/cardDescription"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="Test information"
+                    android:textSize="14sp"
+                    android:paddingBottom="16dp"
+                    android:paddingLeft="16dp" />
 
                 <TextClock android:layout_width="wrap_content"
-                           android:layout_height="wrap_content"
-                           android:layout_marginRight="16dp"
-                           android:paddingBottom="16dp"
-                           android:layout_gravity="bottom|right"
-                           android:textSize="14sp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="16dp"
+                    android:paddingBottom="16dp"
+                    android:layout_gravity="bottom|right"
+                    android:textSize="14sp"
                     android:textColor="@color/md_grey_700"
-                />
-
-
-
+                    />
+            </GridLayout>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
