--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,6 @@
     <color name="PrimaryDarkPink">#D81B60</color>
     <color name="AccentPink">#D81B60</color>
     <color name="foreground_material_light">#ffffff</color>
-    <color name="black">#ffffff</color>
+    <color name="black">#000000</color>
 
 </resources>
