--- a/app/src/main/res/layout/activity_add_new_card.xml
+++ b/app/src/main/res/layout/activity_add_new_card.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
+
+<ScrollView
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,12 +21,18 @@
     android:scrollbars="vertical"
     tools:context="com.dreamteam.organizeyourday.AddNewCardActivity">
 
+
+    <TimePicker
+        android:id="@+id/time"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:timePickerMode="spinner" />
     <TextView
         android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Title"
-        android:textSize="24sp"/>
+        android:textSize="24sp" />
 
     <android.support.design.widget.TextInputEditText
         android:id="@+id/inputTitleText"
@@ -60,29 +74,35 @@
         </Spinner>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <android.support.v7.widget.ButtonBarLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:baselineAligned="false"
+        android:layout_marginTop="8dp">
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/cancel_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="Cancel"/>
+            android:layout_width="0dip"
+            android:layout_height="60dip"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Cancel"
+            android:textSize="16sp"
+            android:layout_marginRight="40dp"/>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/addButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="Add"/>
+            android:layout_width="0dip"
+            android:layout_height="60dip"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Add"
+            android:textSize="16sp"
+            android:layout_gravity="end"/>
 
-    </LinearLayout>
+    </android.support.v7.widget.ButtonBarLayout>
 
-    <TimePicker
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></TimePicker>
+
+</LinearLayout>
+</ScrollView>
 </LinearLayout>
