--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -17,6 +17,16 @@
         card:cardElevation="2dp"
         card:cardUseCompatPadding="true">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:src="@drawable/tumblr"
+                android:scaleType="centerCrop"/>
+
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -25,13 +35,10 @@
                 <TextView
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
+                    android:textSize="24sp"
                     android:paddingLeft="16dp"
-                    android:paddingTop="11dp"
-                    android:id="@+id/title"
-                    android:textIsSelectable="false"
-                    android:text="Title text"
-                    android:autoText="false" />
+                    android:paddingTop="16dp"
+                    android:id="@+id/title"/>
 
                 <TextView/>
 
@@ -40,21 +47,20 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:text="Test information"
-                    android:textSize="11sp"
-                    android:paddingBottom="9dp"
-                    android:paddingLeft="16dp"
-                    android:textStyle="italic"
-                    android:paddingTop="8dp" />
+                    android:textSize="14sp"
+                    android:paddingBottom="16dp"
+                    android:paddingLeft="16dp" />
 
                 <TextClock android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="16dp"
-                    android:paddingBottom="9dp"
+                    android:paddingBottom="16dp"
                     android:layout_gravity="bottom|right"
                     android:textSize="14sp"
                     android:textColor="@color/md_grey_700"
                     />
             </GridLayout>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
