--- a/app/src/main/res/drawable/flag_yellow.xml
+++ b/app/src/main/res/drawable/flag_yellow.xml
@@ -2,6 +2,6 @@
     android:viewportWidth="256.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#FF000000" android:pathData="M40.33,250.77c0,2.87 -2.35,5.22 -5.22,5.22h-2.41c-2.87,0 -5.22,-2.35 -5.22,-5.22V5.22C27.47,2.35 29.82,0 32.69,0h2.41c2.87,0 5.22,2.35 5.22,5.22V250.77z"/>
     <path android:fillAlpha="0.2" android:fillColor="#D8D8D8" android:pathData="M35.1,250.73h-2.41c-2.87,0 -5.22,-2.35 -5.22,-5.22v5.27c0,2.87 2.35,5.22 5.22,5.22h2.41c2.87,0 5.22,-2.35 5.22,-5.22v-5.27C40.33,248.38 37.98,250.73 35.1,250.73z"/>
-    <path android:fillColor="#00C853" android:pathData="M216.85,4.68H43.84c-0.4,0 -0.78,0.02 -1.17,0.06v127.3c0.39,0.04 0.77,0.06 1.17,0.06h173.01c6.42,0 11.69,-5.26 11.69,-11.69V16.36C228.53,9.94 223.27,4.68 216.85,4.68z"/>
+    <path android:fillColor="#FFEB3B" android:pathData="M216.85,4.68H43.84c-0.4,0 -0.78,0.02 -1.17,0.06v127.3c0.39,0.04 0.77,0.06 1.17,0.06h173.01c6.42,0 11.69,-5.26 11.69,-11.69V16.36C228.53,9.94 223.27,4.68 216.85,4.68z"/>
     <path android:fillAlpha="0.2" android:fillColor="#2C2C2C" android:pathData="M216.85,126.82H43.84c-0.4,0 -0.78,-0.02 -1.17,-0.06v5.27c0.39,0.04 0.77,0.06 1.17,0.06h173.01c6.42,0 11.69,-5.26 11.69,-11.69v-5.27C228.53,121.56 223.27,126.82 216.85,126.82z"/>
 </vector>
