--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -19,69 +19,76 @@
 
             <GridLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:columnCount="3"
+                android:layout_height="match_parent"
+                android:rowCount="3"
+                android:columnCount="4"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="256dp"
+                    android:layout_width="260dp"
                     android:layout_height="wrap_content"
                     android:layout_column="0"
-                    android:layout_row="1"
+                    android:layout_row="0"
                     android:textSize="18sp"
                     android:paddingLeft="16dp"
                     android:paddingTop="11dp"
-                    android:id="@+id/title"
+                    android:id="@+id/card_title"
                     android:textIsSelectable="false"
                     android:text="Title text"
                     android:autoText="false"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:layout_columnSpan="2"
+                    android:layout_gravity="bottom" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:id="@+id/priority_flag"
+                    android:src="@drawable/flag_yellow"
+                    android:layout_gravity="center|fill_vertical|right"
+                    android:layout_row="0"
+                    android:layout_column="2"
+                    android:layout_columnSpan="2"
+                    android:layout_rowSpan="3"
+                    android:paddingRight="16dp" />
 
                 <TextView
-                    android:id="@+id/cardDescription"
-                    android:layout_width="247dp"
+                    android:id="@+id/card_description"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:text="Test information"
-                    android:textSize="11sp"
+                    android:textSize="14sp"
                     android:paddingBottom="9dp"
                     android:paddingLeft="16dp"
                     android:textStyle="italic"
                     android:paddingTop="8dp"
                     android:layout_column="0"
-                    android:layout_row="2" />
+                    android:layout_row="1"
+                    android:layout_columnSpan="2" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:id="@+id/textView2"
-                    android:layout_row="3"
+                    android:id="@+id/card_date"
+                    android:layout_row="2"
                     android:layout_column="0"
                     android:text="DATE"
                     android:paddingLeft="16dp"
-                    android:paddingBottom="9dp" />
+                    android:paddingBottom="9dp"
+                    android:layout_marginRight="10dp" />
 
                 <TextClock android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="16dp"
                     android:paddingBottom="9dp"
-                    android:layout_gravity="bottom|right"
+                    android:layout_gravity="bottom"
                     android:textSize="14sp"
                     android:textColor="@color/md_grey_700"
-                    android:layout_row="3"
-                    android:layout_column="1" />
+                    android:layout_row="2"
+                    android:layout_column="1"
+                    android:id="@+id/card_time"
+                    android:layout_marginLeft="30dp" />
 
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_column="2"
-                    android:layout_row="1"
-                    android:id="@+id/priority_flag"
-                    android:src="@drawable/flag_yellow"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_rowSpan="3"
-                    android:layout_gravity="top" />
             </GridLayout>
     </android.support.v7.widget.CardView>
 
